# SimpleMario

./: .gitignore  2D_Platformer.sln  2D_Platformer.vcxproj  2D_Platformer.vcxproj.filters  CMakeLists.txt  README.md  REAMDE.md  conanfile.py  main.cpp  miniaudio.h  textures.cpp  textures.h
src/: main.cpp  textures.cpp  textures.h
